--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prestart": "npm run migrate",
     "start": "nodemon ./bin/www",
     "migrate": "node_modules/.bin/sequelize db:migrate",
-    "migrate:undo": "node_modules/.bin/sequelize db:migrate:undo"
+    "migrate:undo": "node_modules/.bin/sequelize db:migrate:undo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
