--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bepro-js": "^1.2.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
+    "dayjs": "^1.10.6",
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
