--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "prestart": "npm run migrate",
-    "start": "node_modules/.bin/nodemon ./bin/www",
+    "dev" : "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "migrate": "node_modules/.bin/sequelize db:migrate",
     "migrate:undo": "node_modules/.bin/sequelize db:migrate:undo",
     "test": "echo \"Error: no test specified\" && exit 1"
