--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "bepro-js": "github:bepronetwork/bepro-js#master",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
