--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NETWORK_CONTRACT_ADDRESS=
 NETWORK_PRIVATE_KEY=
 NETWORK_WEB3_CONNECTION=
 IP_API_KEY=
+CORS_ORIGIN=http://localhost:3000/
+CORS_ALLOW_NO_ORIGIN=false
