--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "octokit": "^1.0.5",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
