--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
+    "date-fns": "^2.25.0",
     "dayjs": "^1.10.6",
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
