--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "web3": "^2.0.0-alpha.1"
   }
 }
