feat: paginate past block events

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ NETWORK_WEB3_CONNECTION=
 IP_API_KEY=
 CORS_ORIGIN=http://localhost:3000/
 CORS_ALLOW_NO_ORIGIN=false
+CONTRACT_FIRST_BLOCK_NUMBER=793246
